Visual fixes for settings overflow and minor opacity changes for cards

--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -1,5 +1,3 @@
-
-
 .card {
 	height: 100%;
 	width: 100%;
@@ -12,6 +10,11 @@
 	perspective: 1000px;
 	box-shadow: 0px 18px 25px 6px rgba(0, 0, 0, 0.1);
 	cursor: pointer;
+}
+
+.cardContainer {
+	opacity: 1;
+	transition: opacity 0.5s;
 }
 
 .flipped {
@@ -34,7 +37,6 @@
 
 .disabled {
 	pointer-events: none;
-	transition: opacity 0.5s;
 	opacity: 0.5;
 }
 
